<resources>
    <string name="app_name">AfaryCode</string>
    <string name="login_now">Login Now</string>
    <string name="register">Register</string>
    <string name="register1"><u>REGISTER</u></string>
    <string name="Skip"><u>Skip</u></string>
    <string name="Resend"><u>Re-send</u></string>
    <string name="GETACall"><u>GET A Call</u></string>
    <string name="Login"><u>LOGIN</u></string>
    <string name="book_your_nearby_provider">Book Your Nearby Provider</string>
    <string name="usd">USD</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="order_notes">You have not received any invoice from vendor yet. Please Wait…</string>
    <string name="pharma_notes" translatable="false">AfaryCode Pharmatical Invoice...</string>
    <string name="register12" translatable="false">Register</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="password">Password</string>
    <string name="email_address_mobile_number">Mobile number</string>
    <string name="email_address_mobile_number1">Email/Mobile number</string>
    <string name="verify">Verify</string>
    <string name="restaurant">Restaurant</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="payments_amp_ninvoices"><![CDATA[Payments&\nInvoices]]></string>
    <string name="travel_nticket">Travel\nTicket</string>
    <string name="man_shoes"><u>Man Shoes</u></string>
    <string name="add"><u>ADD</u></string>
    <string name="read_more"><u>READ MORE</u></string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="enter_your_city_to_calculate_the_amount">Enter your city to calculate the amount</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_delivery">Checkout- Delivery</string>
    <string name="landmark_address">Landmark Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="channelId">mychannel</string>
    <string name="next">Next</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_profile">My Profile</string>
    <string name="my_shopping_online_order">My shopping online order</string>
    <string name="my_pharmacy_orders">My pharmacy orders</string>
    <string name="my_requests">My requests</string>
    <string name="others">OTHERS</string>
    <string name="logout">Logout</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="save_password">Save Password</string>
    <string name="_135_136_sneh_nagar_near_agrasen_marg">135-136 sneh nagar, near agrasen marg</string>
    <string name="update">Update</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="cancelled"><u>CANCELLED</u></string>
    <string name="your_booking">Your Booking</string>
    <string name="request_details">Request Details</string>
    <string name="wallet">Wallet</string>
    <string name="available_balance">Available Balance</string>
    <string name="add_money"><u>ADD MONEY</u></string>
    <string name="add_money1">ADD MONEY</string>
    <string name="transfer_money"><u>TRANSFER MONEY</u></string>
    <string name="withdraw_money"><u>WITHDRAW MONEY</u></string>
    <string name="wishlist">Wishlist</string>
    <string name="add_to_card"><u>Add To Card</u></string>
    <string name="please_deliver_it_to_my_home">Please deliver it to my home</string>
    <string name="please_deliver_it_to_my_office">Please deliver it to my office</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="my_orders">My Orders</string>
    <string name="yes_i_agree">Yes, I agree</string>
    <string name="checkout_payment">Checkout- Payment</string>
    <string name="done">Done</string>
    <string name="count">National</string>
    <string name="send_my_invoice_to_another_person">Send my invoice to another person</string>
    <string name="skip">Skip</string>
    <string name="ok">Ok</string>
    <string name="address">Address</string>
    <string name="select_cat">Select Category</string>
    <string name="select_rent_car">Rent Car</string>
    <string name="select_buy_car">Buy Car</string>
    <string name="medicine">Medicines</string>
    <string name="Qty">Qty</string>
    <string name="please_wait">Please wait...</string>
    <string name="search_here">Search here</string>
    <string name="not_available">not available</string>
    <string name="change_your_location">Change your location</string>
    <string name="add_announcements_here">Add announcements details here.</string>
    <string name="change_location">Change location</string>
    <string name="set_as_current_shopping_location">Set as Current Shopping Location</string>
    <string name="search_country">Search Country</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="string_note_for_bottom_sheet">Afarycode will only display content,services and products based on your current location</string>
    <string name="add_address1">ADD BILLING ADDRESS</string>
    <string name="contact_number">Phone Number</string>
    <string name="pin_your_location">Pin Your Location</string>
    <string name="select_area">Select area</string>
    <string name="please_select_address">Please select address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="postcode">Postcode/Zip</string>
    <string name="town">Town/City</string>
    <string name="deliver_to_my_home">Deliver to my home</string>
    <string name="deliver_to_my_office">Deliver to my office</string>
    <string name="deliver_to_another_person">Deliver to another person</string>
    <string name="deliver_where_i_am_now">Deliver where i am now</string>
    <string name="your_address_title">Your Address Title</string>
    <string name="place_api_key">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="please_select_address_type">Please select address type</string>
    <string name="please_enter_mobile_number">Please select phone number</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_country">Please enter country</string>
    <string name="please_enter_town">Please enter town/city</string>
    <string name="please_enter_postcode">Please enter postcode/zip</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="add_address">Add Address</string>
    <string name="dont_want_delivery">I don’t want to be delivered, I will come and collect package myself</string>
    <string name="are_you_sure_you_want_to_delete_this_address">Are you sure you want to delete this address?</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="more_information">More Information</string>
    <string name="pay_now">Pay Now</string>
    <string name="please_indicate_the_airtel_money_number_by_which_you_wish_to_make_the_payment">Please indicate the Airtel money number by which you wish to make the payment</string>
    <string name="please_indicate_the_moov_money_number_by_which_you_wish_to_make_the_payment">Please indicate the Moov money number by which you wish to make the payment</string>
    <string name="please_enter_numbre">Enter number here</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="shops_near_me">Shops near me</string>
    <string name="one_app_that_takes_care_in_every_thing">One app that takes care in every thing</string>
    <string name="do_you_have_a_customer_account">Do you already have a seller account with AfaryCode??</string>
    <string name="no">No</string>
    <string name="you_do_not_create">You don\'t need to create a new account. just use your seller credentials here.</string>
    <string name="order_details">Order details</string>
    <string name="afary_code">Afary Code</string>
    <string name="present_this_code">Present this code only if the seller accept order</string>
    <string name="item_list">Items List</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="qty">Qty X Price</string>
    <string name="total">Total</string>
    <string name="product_name">Product Name</string>
    <string name="decline">Decline</string>
    <string name="type_msg">Type a Message</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="use_conditions">Use Conditions</string>
    <string name="password_successfully_changes">Password changed successfully.</string>
    <string name="old_password">Old password</string>
    <string name="view_all">View all</string>
    <string name="please_add_country">Please add country</string>
    <string name="domestic">Domestic</string>
    <string name="delivery">Delivery</string>
    <string name="all_country">All Country</string>
    <string name="in_stock">IN STOCK</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="products">Products</string>
    <string name="pending_approval">Pending approval</string>
    <string name="payment">Payment</string>
    <string name="i_dont_want_to_be_delivered">I don\'t want to be delivered, I will come and collect package myself</string>
    <string name="click_and_collect">CLICK AND COLLECT</string>
    <string name="quick_delivery">QUICK DELIVERY</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="see_other_products_from_nthis_shop_by_clicking_here">See other products from\nthis shop by clicking here</string>
    <string name="track_order">Track Order</string>
    <string name="api_key_map">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="google_direction_key">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="rate_the_product">Rate the Product</string>
    <string name="review_here">Review here.</string>
    <string name="rate_the_delivery_person">Rate the Delivery Person</string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="order_history">Order History</string>
    <string name="check_availability">Check Availability</string>
    <string name="product_probably_out_of_stock">Product probably out of stock</string>
    <string name="username">Username</string>
    <string name="send_request_to_admin">Send request to admin reset password</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="delivery_">Delivery</string>
    <string name="payments_">Payments</string>
    <string name="sub_total">Sub Total</string>
    <string name="platform_fees">Platform Fees</string>
    <string name="tax_1">Tax 1</string>
    <string name="tax_2">Tax 2</string>
    <string name="shipping_cost_amount">Shipping Cost Amount</string>
    <string name="amount">Amount</string>
    <string name="choose_or_enter_amount">Choose or enter amount</string>
</resources>