<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_money1"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/choose_or_enter_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/amount"
                android:textColor="@color/natural_gray"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/white"
                android:elevation="@dimen/_3sdp">

                <EditText
                    android:id="@+id/money_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="XAF20.00"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="30"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/natural_gray"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/done_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/border_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>

</layout>
