<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:background="@color/white"
           >


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:tint="@color/purple_200"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_icon"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_location"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_15sdp"/>






        </LinearLayout>


        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RRtoolbar"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"

                android:layout_marginTop="@dimen/_7sdp"
                android:maxLines="2"
                android:text="@string/string_note_for_bottom_sheet"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/_12sdp"
                />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RRtoolbar"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:maxLines="1"
                android:text="India"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/_14sdp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RRtoolbar"
                android:layout_marginLeft="@dimen/_15sdp"
                android:maxLines="1"
                android:text="@string/set_as_current_shopping_location"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <EditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llMain"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/rounded_gray_bg"
            android:gravity="center_vertical"

            android:hint="@string/search_country"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_12sdp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edSearch"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_country" />

        <TextView
            android:id="@+id/tvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_30sdp"
            android:textColor="@color/black"
            android:visibility="gone"/>



    </RelativeLayout>
</layout>