<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

          <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llRegister">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="93dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_well1" />


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/you_do_not_create"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:visibility="gone"/>


                  <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold">

                </TextView>

                 <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_box"
                            android:orientation="horizontal"
                            android:weightSum="1"
                           >

                            <com.hbb20.CountryCodePicker
                                android:id="@+id/ccp"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight=".3"
                                android:gravity="center"
                                app:ccp_countryPreference="SA"
                                app:ccp_showFlag="true"
                                app:ccp_showPhoneCode="true"
                                app:ccp_showNameCode="false"
                                app:ccp_contentColor="@color/black"
                                app:ccp_textSize="@dimen/_12sdp"
                                />


                            <EditText
                                android:id="@+id/edt_email"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/poppins_regular"
                                android:layout_weight=".7"
                                android:hint="@string/email_address_mobile_number1"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:padding="@dimen/_10sdp"
                                android:paddingStart="@dimen/_2sdp"
                                android:background="@null"
                                android:textColor="@color/black"
                                android:textColorHint="@color/natural_gray"
                                android:textSize="@dimen/_14sdp" />

                        </LinearLayout>


                    </com.google.android.material.textfield.TextInputLayout>




                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_Pass"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray"
                        app:passwordToggleEnabled="true">

                         <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="@dimen/_12sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/natural_gray"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </RelativeLayout>


                <TextView
                    android:id="@+id/txtForogtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#2F3030"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp" />


                <RelativeLayout
                    android:id="@+id/RRLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/border_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/_20sdp"
                        android:text="@string/login_now"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:src="@drawable/left_arrow">

                    </ImageView>

                </RelativeLayout>


                <TextView
                    android:id="@+id/txtTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/register1"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

</layout>
