<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/do_you_have_a_customer_account"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight=".4"

                android:background="@drawable/login_border_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_centerInParent="true"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                   />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight=".2"
                />



            <RelativeLayout
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight=".4"

                android:background="@drawable/rounded_black_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_centerInParent="true"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    />



            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
</layout>
